# voip-client-ios

./: .gitignore  README
Classes/: CallHistoryTableViewController.xib
liblinphone-sdk/apple-darwin/include/linphone/: config.h
liblinphone-sdk/apple-darwin/include/osip2/: osip_dialog.h  osip_mt.h
liblinphone-sdk/apple-darwin/include/osipparser2/: osip_port.h
liblinphone-sdk/apple-darwin/include/srtp/: config.h
liblinphone-sdk/armv6-apple-darwin/lib/: libilbc.la  liblinphone.la  libosipparser2.la  libspeex.la
liblinphone-sdk/armv7-apple-darwin/lib/: libeXosip2.la  liblinphone.la  libopencore-amrwb.la  libortp.la  libosip2.la  libspeexdsp.la
liblinphone-sdk/i386-apple-darwin/lib/: libeXosip2.la  libmediastreamer.la  libosip2.la  libspeex.la
linphone.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
submodules/build-armv6-apple-darwin/libilbc-rfc3951/: Makefile  config.status  libtool
submodules/build-armv6-apple-darwin/linphone/: Makefile  config.status  libtool  linphone.spec
submodules/build-armv6-apple-darwin/msamr/: Makefile  config.status  libtool  msamr.spec
submodules/build-armv6-apple-darwin/msilbc/: Makefile  config.status  libmsilbc.la  libmsilbc_la-ilbc.lo  libtool
submodules/build-armv6-apple-darwin/mssilk/: Makefile  config.status  libmssilk.la  libtool  silk_dec.lo  silk_enc.lo
submodules/build-armv6-apple-darwin/msx264/: Makefile  config.status  libtool
submodules/build-armv7-apple-darwin/libilbc-rfc3951/: Makefile  config.status  libtool
submodules/build-armv7-apple-darwin/linphone/: Makefile  config.status  libtool
submodules/build-armv7-apple-darwin/msamr/: Makefile  config.status  libtool  msamr.iss
submodules/build-armv7-apple-darwin/msilbc/: Makefile  config.status  libmsilbc.la  libtool
submodules/build-armv7-apple-darwin/mssilk/: Makefile  config.status  libmssilk.la  libtool
submodules/build-armv7-apple-darwin/msx264/: Makefile  config.status  libtool  msx264.iss
submodules/build-i386-apple-darwin/libilbc-rfc3951/: Makefile  config.status  libtool
submodules/build-i386-apple-darwin/linphone/: Makefile  config.h  config.status  libtool  linphone.iss
submodules/build-i386-apple-darwin/msamr/: Makefile  config.status  libtool
submodules/build-i386-apple-darwin/msilbc/: Makefile  config.status  libmsilbc.la  libtool
submodules/build-i386-apple-darwin/mssilk/: Makefile  config.status  libmssilk.la  libtool
submodules/build-i386-apple-darwin/msx264/: Makefile  config.status  libtool
submodules/libilbc-rfc3951/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac
submodules/libilbc-rfc3951/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
submodules/libilbc-rfc3951/debian/: README.Debian  changelog  control  copyright  libilbc0-rfc3951-dev.doc-base  libilbc0-rfc3951-dev.docs  libilbc0-rfc3951-dev.install  libilbc0-rfc3951.config  libilbc0-rfc3951.doc-base  libilbc0-rfc3951.docs  libilbc0-rfc3951.install  libilbc0-rfc3951.manpages  libilbc0-rfc3951.preinst  libilbc0-rfc3951.templates  rules
submodules/libilbc-rfc3951/debian/patches/: series
submodules/libilbc-rfc3951/debian/po/: POTFILES.in  templates.pot
submodules/libilbc-rfc3951/downloads/: Makefile.am  Makefile.in
submodules/libilbc-rfc3951/downloads/known_checksums/: extract-cfile.awk.md5  gips_iLBClicense.pdf.md5  rfc3951.txt.md5
submodules/libilbc-rfc3951/man/: Makefile.am  Makefile.in
submodules/libilbc-rfc3951/pkgconfig/: Makefile.am  Makefile.in  ilbc.pc.in
submodules/libilbc-rfc3951/src/: Makefile.am  Makefile.in
submodules/libilbc-rfc3951/src/known_checksums/: FrameClassify.c.md5  FrameClassify.h.md5  LPCdecode.c.md5  LPCdecode.h.md5  LPCencode.c.md5  LPCencode.h.md5  StateConstructW.c.md5  StateConstructW.h.md5  StateSearchW.c.md5  StateSearchW.h.md5  anaFilter.c.md5  anaFilter.h.md5  constants.c.md5  constants.h.md5  createCB.c.md5  createCB.h.md5  doCPLC.c.md5  doCPLC.h.md5  enhancer.c.md5  enhancer.h.md5  filter.c.md5  filter.h.md5  gainquant.c.md5  gainquant.h.md5  getCBvec.c.md5  getCBvec.h.md5  helpfun.c.md5  helpfun.h.md5  hpInput.c.md5  hpInput.h.md5  hpOutput.c.md5  hpOutput.h.md5  iCBConstruct.c.md5  iCBConstruct.h.md5  iCBSearch.c.md5  iCBSearch.h.md5  iLBC_decode.c.md5  iLBC_decode.h.md5  iLBC_define.h.md5  iLBC_encode.c.md5  (+8 more)
submodules/linphone/: Makefile.in  aclocal.m4  config.h.in  configure
submodules/linphone/autom4te.cache/: output.0  requests  traces.0  traces.1
submodules/linphone/console/: Makefile.in
submodules/linphone/coreapi/: Makefile.in
submodules/linphone/gtk/: Makefile.in
submodules/linphone/m4/: Makefile.in
submodules/linphone/mediastreamer2/: Makefile.in  aclocal.m4  configure  mediastreamer-config.h.in
submodules/linphone/oRTP/: Makefile.in  aclocal.m4  configure  ortp-config.h.in
submodules/linphone/pixmaps/: Makefile.in
submodules/linphone/scripts/: Makefile.in
submodules/linphone/share/: Makefile.in
submodules/msamr/: Makefile.in  aclocal.m4  configure
submodules/msamr/autom4te.cache/: output.0  output.1  traces.0  traces.1
submodules/msamr/src/: Makefile.in
submodules/msilbc/: AUTHORS  Android.mk  ChangeLog  Makefile.am  Makefile.in  NEWS  README  autogen.sh  configure  configure.ac  ilbc.c
submodules/msilbc/autom4te.cache/: output.0  output.1  traces.0  traces.1
submodules/msilbc/debian/: changelog  control  copyright  msilbc.install  rules
submodules/mssilk/: Android.mk  Makefile.am  Makefile.in  README  autogen.sh  configure  configure.ac  silk_dec.c  silk_enc.c
submodules/mssilk/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
submodules/mssilk/sdk/: Makefile.am  Makefile.in  patch_pic.diff
submodules/mssilk/sdk/known_checksums/: SILK_SDK_SRC_v1.0.8.zip.md5
submodules/msx264/: Android.mk  Makefile.am  Makefile.in  NEWS  README  autogen.sh  configure  configure.ac
submodules/msx264/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
submodules/msx264/src/: Makefile.am  Makefile.in  msx264.c
(+1224 files in other folders)
